--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
         "src": "src/client/index.html",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "dist"
+          "distDir": "dist",
+          "buildCommand": "npm run build"
         }
       },
       {
