--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+wakaname: Publish Docker image
 
 on:
   release:
@@ -27,7 +27,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: my-docker-hub-namespace/my-docker-hub-repository
+          images: ghcr.io/mirvanaivo/cv-app:latest
 
       - name: Build and push Docker image
         id: push
