--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: mirwaka/cv-app:latest
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
